2010-10-25  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Change a Warning notice to
	informative notice

2010-10-22  Sancho Lerena <slerena@artica.es>

    * Config.pm: Parsing for mta_from doesn't remove blanks, allowing to
    use a Normal name + Email address in the from.

    * Tools.pm: Email output is parsed with a html decode first. 
    Added timeticks option for tools (intented to use in the future).

    * pandora_server.conf: Example of usage in the mta_from with a fully
    composed email address.

2010-10-22  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Deleted Solaris specific SNMPGET
	definition. It is the same as Linux.
	
2010-10-22  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Changed ping count to for() loop instead of
	using count(-c) option in pandora_ping(). By it, ping execution can be
	finished in short time.
	Added support for Solaris.
	Changed some ping usage for FreeBSD.

2010-10-21  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a generic update function to return
	the number of changes

	* util/pandora_manage.pl: Added the unblock policies to the CLI and
	the block/unblock policies when it are applied.

2010-10-21  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Fixed timeout option for FreeBSD ping.
	(Note: In ping6, '-t' option is not implemented. So, 'networktimeout'
	is not used with ping6.)

2010-10-21  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts
	util/recon_scripts/PandoraFMS
	util/recon_scripts/snmpdevices.pl: Added the example recon script
	that creates several modules for each searched interface

2010-10-21  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Deleted FreeBSD specific SNMPGET
	definition. It is the same as Linux.

	* lib/PandoraFMS/Tools.pm: Added FreeBSD specific Ping function.

2010-10-20  Ramon Novoa  <rnovoa@artica.es>
